--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "18.3.1",
     "react-native-web": "~0.19.13",
     "@expo/metro-runtime": "~4.0.1",
-    "expo-image": "~2.0.5"
+    "expo-image": "~2.0.5",
+    "@expo/vector-icons": "^14.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
