--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/lexend-deca": "^0.2.3",
+    "@expo/metro-runtime": "~4.0.1",
+    "@expo/vector-icons": "^14.0.2",
     "expo": "~52.0.35",
+    "expo-font": "~13.0.4",
+    "expo-image": "~2.0.5",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.7",
     "react-dom": "18.3.1",
-    "react-native-web": "~0.19.13",
-    "@expo/metro-runtime": "~4.0.1",
-    "expo-image": "~2.0.5",
-    "@expo/vector-icons": "^14.0.2"
+    "react-native": "0.76.7",
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
